# qwikstream

./: .gitignore  Cargo.toml  Dockerfile  README.md  install.ps1  install.sh  sample.ndjson
.github/workflows/: release.yml
src/: batcher.rs  checkpoint.rs  cli.rs  controller.rs  deadletter.rs  format.rs  ingest.rs  lib.rs  main.rs  metrics.rs  preflight.rs  prometheus.rs  quickwit.rs  quickwit_error.rs  reader.rs  retry.rs  size.rs  spool.rs  stream.rs
tests/: cli_smoke.rs
