[package]
name = "qwhyper"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Low-memory schema-agnostic streamer for Quickwit"

[features]
default = []
prometheus-metrics = []
simd-json-validation = ["dep:simd-json"]
spill-to-disk = []

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
csv = "1"
flate2 = "1"
futures-util = "0.3"
humantime = "2"
indicatif = "0.17"
memchr = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
serde_json = "1"
simd-json = { version = "0.15", optional = true }
sysinfo = "0.30"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
